fixed track card alignments

--- a/src/app/css/about.css
+++ b/src/app/css/about.css
@@ -58,7 +58,6 @@
 .tracks img {
     width: 150px;
     display: block;
-    padding-bottom: 3vh;
 }
 
 .about-page {
@@ -154,6 +153,8 @@
         max-width: 150px;
         margin-bottom: 10px;
         padding-bottom: 10px;
+        justify-content: center;
+        align-items: center;
     }
 
     .tracks h1 {
